# Exchange-Web-App

./: CMakeLists.txt  Exchange_Web_App.cpp  MoneyExchange.py  MoneyExchange.spec  Pass-Checker.sln  README.md  handling_CSV_file.hpp  money_converter.cpp  money_converter.h  password_checker.cpp  server_file.cpp  server_file.hpp  vcpkg.json
.github/workflows/: c-cpp.yml  ci.yml  szim.yml  test.yml
Pass-Checker/: CurrencyTransaction.cpp  CurrencyTransaction.h  Pass-Checker.cpp  Pass-Checker.vcxproj  Pass-Checker.vcxproj.filters  User.h  User_info_balance.cpp  bridge.cpp  dataset.csv  handling_CSV_file.cpp  handling_CSV_file.h  main.cpp  money_converter.cpp  money_converter.h  password_checker.cpp  password_checker.h  test1.cpp  users.csv
Pass-Checker/Debug/: Pass-Checker.exe.recipe  Pass-Checker.ilk  vc143.idb
Pass-Checker/Debug/Pass-Checker.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Pass-Checker.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Pass-Checker/x64/Debug/: Pass-Checker.exe.recipe  Pass-Checker.ilk  vc143.idb
Pass-Checker/x64/Debug/Pass-Checker.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Pass-Checker.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Pass-Checker/x64/Release/: Pass-Checker.exe.recipe  Pass-Checker.iobj  Pass-Checker.ipdb
Pass-Checker/x64/Release/Pass-Checker.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Pass-Checker.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
React/: index.html  package-lock.json  package.json
React/src/: App.css  App.tsx  index.tsx
React/src/components/: Login.tsx  Main.tsx  MainWrapper.tsx  Register.tsx
database/: Dane.csv  currencies.csv  database.db  user_auth.csv  user_balance.csv
money_converter/: MoneyExchange.py  money_converter.cpp  money_converter.sln  money_converter.vcxproj  money_converter.vcxproj.filters
money_converter/money_converter/x64/Debug/: money_converter.exe.recipe  money_converter.ilk  vc143.idb
money_converter/money_converter/x64/Debug/money_converter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  money_converter.lastbuildstate
src/main/: Exchange_Web_App.cpp
src/modules/: MoneyExchange.py  handling_CSV_file.cpp  handling_CSV_file.hpp  handling_db.cpp  handling_db.hpp  money_converter.cpp  money_converter.hpp  password_checker.cpp  password_checker.hpp  server_file.cpp  server_file.hpp  server_message_processing.cpp  server_message_processing.hpp
tests/: CMakeLists.txt  test_main.cpp  test_money_converter.cpp  test_server_message_processing.cpp
ws/: Dane.csv  MoneyExchange.py  baza_danych.h  gui  gui.css  gui.tsx  handling_CSV_file.cpp  handling_CSV_file.h  index.html  money_converter.cpp  money_converter.h  password_checker.cpp  password_checker.h  password_checker.hpp  prosta baza danych  websocket.cpp
